crates/dollet-server/src/api/snapshots/dollet__api__tests__shape-channel-profiles.snap
---
source: crates/dollet-server/src/api/tests.rs
expression: /api/channels/profiles/
---
count: number
page: number
pages: number
results[].channels[].channel: number
results[].channels[].enabled: bool
results[].id: number
results[].name: string
