crates/dollet-server/src/api/snapshots/dollet__api__tests__shape-channels.snap
---
source: crates/dollet-server/src/api/tests.rs
expression: /api/channels/channels/
---
count: number
page: number
pages: number
results[].auto_created: bool
results[].catchup_days: number
results[].channel_group_id: number
results[].channel_number: null|number
results[].effective_channel_number: null|number
results[].effective_epg_data_id: null|number
results[].effective_name: string
results[].effective_stream_profile_id: null|number
results[].effective_tvc_guide_stationid: null|string
results[].effective_tvg_id: null|string
results[].epg_data_id: null|number
results[].epg_name: null|string
results[].group_name: string
results[].hidden_from_output: bool
results[].id: number
results[].is_adult: bool
results[].is_catchup: bool
results[].logo_id: null|number
results[].logo_url: null|string
results[].name: string
results[].override: null
results[].override.channel_group_id: number
results[].override.channel_number: number
results[].override.epg_data_id: number
results[].override.logo_id: number
results[].override.name: string
results[].override.stream_profile_id: number
results[].override.tvc_guide_stationid: string
results[].override.tvg_id: string
results[].stream_profile_id: null|number
results[].streams[]: empty|number
results[].tvc_guide_stationid: null|string
results[].tvg_id: null|string
results[].user_level: number
results[].uuid: string
